# sciop

./: .env.sample  .gitignore  README.md  db.dev.sqlite.vanilla  flake.nix  mkdocs.yml  pyproject.toml  python-packages.nix  sciop.sample.yaml
.forgejo/issue_template/: bug.yml  feature.yml  general.yml
.forgejo/workflows/: lint-codeberg.yml  lint.yml  test-codeberg.yml  test.yml
doc/: checksums.md
docs/: changelog.md  index.md  privacy.md  quickstart.md  running.md
docs/css/: fonts.css  theme.css  vars.css
docs/develop/: backend.md  contributing.md  debugging.md  design.md  error_handling.md  frontend.md  index.md
docs/develop/diagrams/: db.dot
docs/examples/: index.md  uploading.md
docs/intro/: bittorrent.md  bittorrent_v2.md  overview.md  roadmap.md
docs/macros/: main.py
docs/python/: config.md  crud.md  db.md  deps.md  exceptions.md  index.md  logging.md  middleware.md  mixins.md  scheduler.md  services.md  types.md
docs/python/models/: account.md  api.md  base.md  claim.md  dataset.md  index.md  moderation.md  report.md  rss.md  stats.md  system.md  tag.md  torrent.md  tracker.md  upload.md
docs/running/: cli.md  index.md  maintenance.md
docs/sciop/: error_handling.md  jobs.md
docs/scraping/: ftp.md  github.md  http.md  index.md  s3.md  webpages.md
docs/uploading/: checksums.md  default_trackers.txt  formatting.md  index.md  rules.md  torrents.md  trackers.md
docs/using/: browsing.md  curating.md  index.md  metadata.md  moderation.md  rss.md  seeding.md  torrenting.md
scripts/: version.py
src/sciop/: __init__.py  __main__.py  _version.py  app.py  config.py  const.py  crud.py  db.py  exceptions.py  jobs.py  limiter.py  logging.py  main.py  middleware.py  scheduler.py  services.py  types.py  udp.py
src/sciop/api/: auth.py  deps.py  main.py
src/sciop/api/routes/: __init__.py  claims.py  datasets.py  instance.py  login.py  report.py  review.py  tags.py  torrents.py  upload.py  uploads.py
src/sciop/cli/: common.py  config.py  docs.py  generate.py  main.py  maintain.py  start.py  trackers.py
src/sciop/config/: __init__.py  db.py  feeds.py  instance.py  logs.py  main.py  paths.py  server.py  services.py
src/sciop/frontend/: accounts.py  autocomplete.py  datasets.py  index.py  main.py  partials.py  rdf.py  reports.py  review.py  rss.py  self.py  tags.py  templates.py  test.py  uploads.py
src/sciop/helpers/: __init__.py  collections.py  dehumanize.py  type.py
src/sciop/migrations/: alembic.ini  env.py
src/sciop/migrations/versions/: 20250302-8d38682_allow_deletions.py  20250313-e8b6da6_add_tracker_stats.py  20250322-83e6a7f_add_editing.py  20250327-a62f6bb_add_bittorent_source_type.py  20250327-de2fc8d_add_fk_indices.py  20250328-3e34a34_username_collate_nocase.py  20250328-e5376c6_drop_file_in_torrent_history.py  20250331-8c660f7_add_site_stats.py  20250408-9cd226c_add_no_response_error.py  20250408-f654097_remove_padfiles.py  20250411-22c913b_recalculate_total_size_of_torrents.py  20250419-0f0198c_bump_limits.py  20250505-82afde6_hit_counter.py  20250506-0f29b9e_rm_tracker_query_params.py  20250526-0f06a27_create_time_index.py  20250526-5560db8_create_time_index.py  20250526-757be3a_create_time_index.py  20250526-f52be90_create_time_index.py  20250603-246b20d_add_claims.py  20250728-efb45cd_support_v2_only.py  20250729-6aeff93_add_webseeds.py  20250804-4947bb8_account_dataset_scopes.py  20250812-f818116_add_webseed_moderation.py  20250903-d7d6663_add_atom_feeds.py  20250904-99812ae_rm_file_in_torrent_timestamps.py  20250912-b98157b_add_reports.py  20250914-4947bb8_account_dataset_scopes.py  20251017-8b8cc41_add_report_resolved_at.py  20251017-b81af74_report_action.py  20251020-15c3475_update_moderation_action.py  20251022-624409a_add_reports.py  20260114-8eb0432_create_scope_links_table.py
src/sciop/models/: __init__.py  account.py  api.py  atom.py  base.py  claim.py  counter.py  dataset.py  magnet.py  mixin.py  moderation.py  mystery.py  report.py  rss.py  scope.py  stats.py  system.py  tag.py  torrent.py  tracker.py  upload.py  webseed.py
src/sciop/models/mixins/: __init__.py  decorator.py  edit.py  enum.py  filter.py  frontend.py  list.py  moderation.py  scope.py  search.py  sort.py  table.py  template.py
src/sciop/scheduler/: __init__.py  base.py  decorator.py  local.py  main.py  registry.py  rpc.py
src/sciop/services/: __init__.py  atom.py  backup.py  docs.py  markdown.py  stats.py  tracker_scrape.py  webseeds.py
src/sciop/static/css/: base.css  components.css  fonts.css  form.css  layout.css  nav.css  responsive.css  style.css  typography.css  vars.css
src/sciop/static/js/: form-json-1.0.4.js  htmx-2.0.4.min.js.map  htmx_events.js  json-enc-2.0.2.js  theme.js
src/sciop/templates/includes/: footer-js.html  footer.html  head.html  header.html  login-button.html  (+3 more)
src/sciop/testing/: fabricators.py  plugin.py  scheduler.py  server.py
tests/: conftest.py  test_config.py  test_crud.py  test_db.py  test_fixtures.py  test_helpers.py  test_logging.py  test_middleware.py  test_migrations.py  test_mixins.py  test_scheduler.py  test_types.py
tests/data/: test_hybrid_w_pad.torrent
tests/fixtures/: __init__.py  db.py  fabricators.py  fixtures.py  paths.py  server.py  tracker.py
tests/test_api/: test_claims.py  test_datasets.py  test_docs.py  test_instance.py  test_login.py  test_reports.py  test_review.py  test_torrents.py  test_upload.py  test_uploads.py
tests/test_cli/: test_config.py  test_maintain.py  test_start.py
tests/test_frontend/: test_accessibility.py  test_dataset_parts.py  test_datasets.py  test_header.py  test_index.py  test_pages.py  test_pagination.py  test_rdf.py  test_reports.py  test_request.py  test_rss.py  test_search.py  test_self.py  test_tags.py  test_uploads.py  test_webseeds.py
tests/test_models/: test_account.py  test_constraints.py  test_dataset.py  test_magnet.py  test_mixins.py  test_report.py  test_system.py  test_torrent.py  test_upload.py
tests/test_services/: test_atom.py  test_backup.py  test_docs.py  test_markdown.py  test_stats.py  test_tracker_scrape.py  test_webseeds.py
(+89 files in other folders)
