[project]
name = "sciop"
description = "Default template for PDM package"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dynamic=["version"]
dependencies = [
    "fastapi>=0.115.8",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.1",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.5",
    "alembic>=1.14.1",
    "lxml>=5.3.0",
    "pydantic[email]>=2.11.3",
    "rich>=13.9.4",
    "platformdirs>=4.3.6",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "bcrypt>=4.2.1",
    "fastapi-pagination>=0.12.34",
    "torrent-models>=0.2.1",
    "humanize>=4.11.0",
    "slowapi>=0.1.9",
    "fasthx>=2.1.1",
    "python-slugify>=8.0.4",
    "rdflib>=7.1.3",
    "content-negotiation>=1.1.2",
    "apscheduler>=3.11.0",
    "aiodns>=3.2.0",
    "mistune>=3.1.2",
    "nh3>=0.2.21",
    "pygments>=2.19.1",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "PyYAML>=6.0.2",
    "ruamel-yaml>=0.18.10",
    "bencode-rs>=0.0.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "EUPL-1.2"}

[project.scripts]
sciop = "sciop.cli.main:_main"

[project.optional-dependencies]
docs = [
    "griffe-fieldz>=0.2.1",
    "griffe-inherited-docstrings>=1.1.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-git-authors-plugin>=0.9.4",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.4",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.14.3",
    "sciop-cli>=0.1.4",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "beautifulsoup4>=4.13.3",
    "pytest-alembic>=0.11.1",
    "pytest-playwright-asyncio>=0.7.0",
    "pytest-timeout>=2.3.1",
    "pytest-httpx>=0.35.0",
    "numpy>=2.2.4",
    "faker>=35.2.0",
]
dev = [
    "sciop[docs,test]",
    "ruff>=0.9.4",
    "black>=25.1.0",
    "watchfiles>=1.0.4",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "call"
getter = "scripts.version:get_version"

[tool.pdm.scripts]
start = "sciop start"
test = "pytest"
lint.composite = [
    "ruff check",
    "black . --diff"
]
format.composite = [
    "black .",
    "ruff check --fix",
]
docs = "mkdocs serve --dirty"
alembic = "alembic -c ./src/sciop/migrations/alembic.ini"
migrate = "alembic -c ./src/sciop/migrations/alembic.ini upgrade head"
migration.composite = [
    "rm -f db.dev.sqlite",
    "alembic -c ./src/sciop/migrations/alembic.ini upgrade head",
    "alembic -c ./src/sciop/migrations/alembic.ini revision --autogenerate -m {args}"
]



[tool.ruff]
target-version = "py311"
include = ["src/sciop/**/*.py", "scripts/**/*.py", "tests/**/*.py", "pyproject.toml"]
exclude = ["docs", "src/sciop/vendor/**/*"]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # annotations
    "ANN",
    # no debugger
    "T10",
    ## ----------
    # pydocstyle
    # indentation
    "D207", "D208",
    # whitespace
    "D210", "D211",
    # emptiness
    "D419",
    # snake case function name
    "N802",
    # FastAPI
    "FAST",
    # SQLi and Autoescaping in templates
    "S608", "S701",
]
ignore = [
    "ANN101", "ANN102", "ANN401", "ANN204",
    # explicit strict arg for zip
    "B905",
    # builtin type annotations
    "UP006", "UP035",
    # | for Union types (only supported >=3.10
    "UP007", "UP038",
    # using Optional[] is fine
    "UP045",
    # docstrings for __init__
    "D107",
    # Equality comparisons to ``True``, which are valid in sqlalchemy
    "E712",
    # Sometimes expanding if/else is simpler
    "SIM114",
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{api,frontend}/*" = ["ANN201"]
"tests/**/test_*" = ["ANN001", "ANN201", "F841"]
"tests/conftest.py" = ["F403", "E402"]
"tests/fixtures/**/*" = ["F403"]
"src/sciop/migrations/env.py" = ["ANN"]

[tool.black]
target-version = ['py311', 'py312', 'py313']
include = "(?:tests|sciop|scripts)/.*\\.py$"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --browser firefox"
asyncio_default_fixture_loop_scope = "session"
markers = """
  playwright: tests that use the playwright webdriver
  markdown: tests that render markdown within HTML
  slow: slow tests!
  docs: tests that require the docs dependencies/test the docs
"""
filterwarnings = [
    'ignore:Python 3.14 will, by default, filter extracted tar archives',
    "ignore:Accessing the 'model_computed_fields'::fasthx",
]
